@@ -1,0 +1,13 @@
+<?xml version="1.0" encoding="utf-8"?>
+<article xmlns="http://docbook.org/ns/docbook">
+  <section>
+    <title>eZ Components example document</title>
+    <para>This is an example FODT document for the eZ Document component.</para>
+    <section>
+      <title>Second level headline</title>
+      <para>cubilia Curae; <ulink url="http://ezcomponents.org/">Cras fermentum ipsum</ulink>
+      nec est entum<footnote label="1"><para>A little footnote</para></footnote>
+      ac accumsan.</para>
+    </section>
+  </section>
+</article>
